// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Snowflakes/Home Default 1`] = `
Array [
  <nav
    className="navbar navbar-light"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <ul
        className="nav navbar-nav pull-xs-right"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/login"
            onClick={[Function]}
          >
            Sign in
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/register"
            onClick={[Function]}
          >
            Sign up
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <main>
    <div
      className="home-page"
    >
      <div
        className="banner"
      >
        <div
          className="container"
        >
          <h1
            className="logo-font"
          >
            conduit
          </h1>
          <p>
            A place to share your knowledge.
          </p>
        </div>
      </div>
      <div
        className="container page"
      >
        <div
          className="row"
        >
          <div
            className="col-md-9"
          >
            <div
              className="feed-toggle"
            >
              <ul
                className="nav nav-pills outline-active"
              >
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link active"
                    href="/"
                    onClick={[Function]}
                  >
                    Global Feed
                  </a>
                </li>
                
              </ul>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-outline-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  0
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  1
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
          </div>
          <div
            className="col-md-3"
          >
            <div
              className="sidebar"
            >
              <p>
                Popular Tags
              </p>
              <div
                className="tag-list"
              >
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  dragons
                </a>
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  training
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>,
  <footer>
    <div
      className="container"
    >
      <a
        className="logo-font"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <span
        className="attribution"
      >
        An interactive learning project from
         
        <a
          href="https://thinkster.io"
        >
          Thinkster
        </a>
        . Code & design licensed under MIT.
      </span>
    </div>
  </footer>,
]
`;

exports[`Storyshots Snowflakes/Home Logged In 1`] = `
Array [
  <nav
    className="navbar navbar-light"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <ul
        className="nav navbar-nav pull-xs-right"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/editor"
            onClick={[Function]}
          >
            <i
              className="ion-compose"
            />
             New Post
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/settings"
            onClick={[Function]}
          >
            <i
              className="ion-gear-a"
            />
             Settings
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/profile/jake"
            onClick={[Function]}
          >
            jake
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <main>
    <div
      className="home-page"
    >
      <div
        className="container page"
      >
        <div
          className="row"
        >
          <div
            className="col-md-9"
          >
            <div
              className="feed-toggle"
            >
              <ul
                className="nav nav-pills outline-active"
              >
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link"
                    href="/"
                    onClick={[Function]}
                  >
                    Your Feed
                  </a>
                </li>
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link active"
                    href="/"
                    onClick={[Function]}
                  >
                    Global Feed
                  </a>
                </li>
                
              </ul>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-outline-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  0
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  1
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
          </div>
          <div
            className="col-md-3"
          >
            <div
              className="sidebar"
            >
              <p>
                Popular Tags
              </p>
              <div
                className="tag-list"
              >
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  dragons
                </a>
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  training
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>,
  <footer>
    <div
      className="container"
    >
      <a
        className="logo-font"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <span
        className="attribution"
      >
        An interactive learning project from
         
        <a
          href="https://thinkster.io"
        >
          Thinkster
        </a>
        . Code & design licensed under MIT.
      </span>
    </div>
  </footer>,
]
`;

exports[`Storyshots Snowflakes/Home Selected Tag 1`] = `
Array [
  <nav
    className="navbar navbar-light"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <ul
        className="nav navbar-nav pull-xs-right"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/login"
            onClick={[Function]}
          >
            Sign in
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/register"
            onClick={[Function]}
          >
            Sign up
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <main>
    <div
      className="home-page"
    >
      <div
        className="banner"
      >
        <div
          className="container"
        >
          <h1
            className="logo-font"
          >
            conduit
          </h1>
          <p>
            A place to share your knowledge.
          </p>
        </div>
      </div>
      <div
        className="container page"
      >
        <div
          className="row"
        >
          <div
            className="col-md-9"
          >
            <div
              className="feed-toggle"
            >
              <ul
                className="nav nav-pills outline-active"
              >
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link"
                    href="/"
                    onClick={[Function]}
                  >
                    Global Feed
                  </a>
                </li>
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link active"
                    href="/"
                    onClick={[Function]}
                  >
                    <i
                      className="ion-pound"
                    />
                     
                    dragons
                  </a>
                </li>
              </ul>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-outline-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  0
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  1
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
          </div>
          <div
            className="col-md-3"
          >
            <div
              className="sidebar"
            >
              <p>
                Popular Tags
              </p>
              <div
                className="tag-list"
              >
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  dragons
                </a>
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  training
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>,
  <footer>
    <div
      className="container"
    >
      <a
        className="logo-font"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <span
        className="attribution"
      >
        An interactive learning project from
         
        <a
          href="https://thinkster.io"
        >
          Thinkster
        </a>
        . Code & design licensed under MIT.
      </span>
    </div>
  </footer>,
]
`;

exports[`Storyshots Snowflakes/Home Your Feed 1`] = `
Array [
  <nav
    className="navbar navbar-light"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <ul
        className="nav navbar-nav pull-xs-right"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/editor"
            onClick={[Function]}
          >
            <i
              className="ion-compose"
            />
             New Post
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/settings"
            onClick={[Function]}
          >
            <i
              className="ion-gear-a"
            />
             Settings
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/profile/"
            onClick={[Function]}
          >
            
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <main>
    <div
      className="home-page"
    >
      <div
        className="container page"
      >
        <div
          className="row"
        >
          <div
            className="col-md-9"
          >
            <div
              className="feed-toggle"
            >
              <ul
                className="nav nav-pills outline-active"
              >
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link active"
                    href="/"
                    onClick={[Function]}
                  >
                    Your Feed
                  </a>
                </li>
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link"
                    href="/"
                    onClick={[Function]}
                  >
                    Global Feed
                  </a>
                </li>
                
              </ul>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-outline-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  0
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
            <div
              className="article-preview"
            >
              <div
                className="article-meta"
              >
                <a
                  className="undefined"
                  href="/profile/jake"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    src="https://i.stack.imgur.com/xHWG8.jpg"
                  />
                </a>
                <div
                  className="info"
                >
                  <a
                    className="author"
                    href="/profile/jake"
                    onClick={[Function]}
                  >
                    jake
                  </a>
                  <span
                    className="date"
                  >
                    Feb 18,2016
                  </span>
                </div>
                <button
                  className="btn btn-primary pull-xs-right btn-sm"
                  onClick={[Function]}
                >
                  <i
                    className="ion-heart"
                  />
                   
                  1
                </button>
              </div>
              <a
                className="preview-link"
                href="/"
                onClick={[Function]}
              >
                <h1>
                  How to train your dragon
                </h1>
                <p>
                  Ever wonder how?
                </p>
                <span>
                  Read more...
                </span>
                <ul
                  className="tag-list"
                >
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    dragons
                  </li>
                  <li
                    className="tag-default tag-pill tag-outline"
                  >
                    training
                  </li>
                </ul>
              </a>
            </div>
          </div>
          <div
            className="col-md-3"
          >
            <div
              className="sidebar"
            >
              <p>
                Popular Tags
              </p>
              <div
                className="tag-list"
              >
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  dragons
                </a>
                <a
                  className="tag-pill tag-default"
                  href="/"
                  onClick={[Function]}
                >
                  training
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>,
  <footer>
    <div
      className="container"
    >
      <a
        className="logo-font"
        href="/"
        onClick={[Function]}
      >
        conduit
      </a>
      <span
        className="attribution"
      >
        An interactive learning project from
         
        <a
          href="https://thinkster.io"
        >
          Thinkster
        </a>
        . Code & design licensed under MIT.
      </span>
    </div>
  </footer>,
]
`;
